--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethos-connect-vue",
-  "version": "0.0.3",
+  "version": "0.0.7",
   "main": "dist/index.js",
   "license": "MIT",
   "type": "module",
@@ -10,6 +10,9 @@
   },
   "peerDependencies": {
     "vue": "^3.2.20"
+  },
+  "dependencies": {
+    "@mysten/sui.js": "^0.16.0"
   },
   "devDependencies": {
     "rollup": "^3.3.0",
